# solitaire-rs

./: .gitignore  Cargo.toml  README.md  temp.rs
bindings/: Cargo.toml  build.rs
src/: interop.rs  main.rs  window_target.rs
src/solitaire/: assets.rs  card.rs  composition_card.rs  game.rs  mod.rs  shape_cache.rs  solitaire.rs  svg.rs
src/util/: d2d.rs  d3d.rs  error.rs  geometry_source.rs  mod.rs  streams.rs  try_cast.rs
