[package]
name = "solitaire-rs"
version = "0.1.0"
authors = ["robmikh <rob.mikh@outlook.com>"]
edition = "2018"

[dependencies]
winit = "0.24.0"
raw-window-handle = "0.3.3"
rand = "0.8.5"
compsvg = { git = "https://github.com/robmikh/compsvg", rev = "0badd57dbbd22707006c12a336218fa7e97e32c6" }

[dependencies.windows]
version = "0.38.0"
features = [
    "alloc",
    "implement",
    "Foundation",
    "Foundation_Collections",
    "Foundation_Metadata",
    "Foundation_Numerics",
    "UI",
    "UI_Composition",
    "UI_Composition_Desktop",
    "Graphics",
    "Graphics_DirectX",
    "Graphics_DirectX_Direct3D11",
    "Storage",
    "Storage_Streams",
    "System",
    "Win32_Foundation",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
    "Win32_System_WinRT",
    "Win32_System_WinRT_Composition",
    "Win32_System_WinRT_Direct3D11",
    "Win32_System_WinRT_Graphics_Direct2D",
    "Win32_UI_WindowsAndMessaging",
]

[dependencies.robmikh-common]
git = "https://github.com/robmikh/robmikh-common-rs"
rev = "7621b3c717725c4d5e3026b6759085514f97e842"
features = [
    "composition-desktop",
    "d2d",
    "d3d",
    "dispatcher-queue-desktop",
]
